--- a/musty_resume.tex
+++ b/musty_resume.tex
@@ -64,92 +64,105 @@
 \section{Research Experience}{
   \begin{adcvtabletwo}
     \adcvrowtwo{\textbf{2-Group Belyi Maps}, Ph.D. Thesis}{expected 2019}
-    \begin{itemize}
-      \item
-        Developed and implemented an algorithm to compute
-        a database of 2-group Belyi maps up to degree 256
-      \item
-        Analyzed this data to steer conjectures about these objects
-      \item
-        Used this analysis to search for special number fields
-        ramified only at 2
-      \item
-        Repository: \url{https://github.com/michaelmusty/solvabledessins}
-      \item
-        Visualization: \url{https://dessin-explorer.org}
-    \end{itemize}
-    \adcvrowskip
-    %\adcvrowtwo{\textbf{Computing TODO Homology}, Programmer}{2019}
-    %\adcvrowmulti{
-    %}
-    %\adcvrowskip
-    \adcvrowtwo{\textbf{Computing Canonical Rings of Hilbert Modular Forms}, Programmer}{2018}
-    \adcvrowmulti{
-      I worked on a large (10 person) team to implement techniques to compute
-      canonical rings of Hilbert modular forms.
-      I was responsible for the data structure to store and compute with
-      Fourier expansions of Hilbert modular forms
-      necessary to support these computations.
+      \vspace{-10pt}
       \begin{itemize}
         \item
-          repository: \url{https://github.com/edgarcosta/hilbertmodularforms}
+          Developed and implemented an algorithm to compute
+          a database of 2-group Belyi maps up to degree 256
+        \item
+          Analyzed this data to steer conjectures about these objects
+        \item
+          Used this analysis to search for special number fields
+          ramified only at 2
+        \item
+          Repository: \url{https://github.com/michaelmusty/solvabledessins}
+        \item
+          Visualization: \url{https://dessin-explorer.org}
       \end{itemize}
-    }
+    \adcvrowskip
+    \adcvrowtwo{\textbf{Computing Canonical Rings of Hilbert Modular Forms}, Programmer}{2018}
+      \vspace{-10pt}
+      \begin{itemize}
+        \item
+          Implemented the data structure to store
+          and compute with Fourier expansions of Hilbert modular forms
+        \item
+          Worked as part of a 10+ person team
+        \item
+          Organized the (git) workflow of the team
+        \item
+          Repository: \url{https://github.com/edgarcosta/hilbertmodularforms}
+      \end{itemize}
     \adcvrowskip
     \adcvrowtwo{\textbf{A Database of Belyi Maps}, Co-author}{2018}
-    \adcvrowmulti{
-      In this paper,
-      we compute a database of thousands or Belyi maps up to degree 9.
-      On top of the group effort to compute an exhaustive list of Belyi maps,
-      my main responsibility in this project was implementing the
-      database backend using Magma (see repository below) to save the results.
-      I then worked in a team of 4 to migrate the data
-      over to the LMFDB (\url{www.lmfdb.org}).
+      \vspace{-10pt}
       \begin{itemize}
+        \item
+          Implemented the database backend using Magma
+        \item
+          Computed thousands of Belyi maps up to degree 9
+        \item
+          Worked in a team of 4 people to migrate this data over
+          to the LMFDB (\url{www.lmfdb.org})
+        \item
+          Wrote Magma and Python scripts to convert this Magma database
+          to MongoDB as part of the migration
         \item
           Awarded Selfridge Prize at ANTS-XIII:
           \url{http://www.math.grinnell.edu/~paulhusj/ants2018/index.html}
         \item
-          repository: \url{https://github.com/michaelmusty/BelyiDB}
+          Repository: \url{https://github.com/michaelmusty/BelyiDB}
         \item
           LMFDB: \url{http://beta.lmfdb.org/Belyi}
+        \item
+          Peer-Reviewed Article: \cite{ants}
       \end{itemize}
-    }
     \adcvrowskip
     \adcvrowtwo{\textbf{Understanding the cost of dermatologic care: A survey study of dermatology providers,
     residents, and patients}, Co-author}{2017}
-    \adcvrowmulti{
-      Using R, I ran the statistical analysis for survey results in this dermatology study
-      and generated Likert scale visualizations to analyze the data.
-    }
+      \vspace{-10pt}
+      \begin{itemize}
+        \item
+          Carried out the statistical analysis for survey data of this study
+          using R
+        \item
+          Generated Likert scale visualizations to analyze the study data
+          using R
+        \item
+          Peer-Reviewed Article: \cite{aaron}
+      \end{itemize}
     \adcvrowskip
     \adcvrowtwo{\textbf{Numerical calculation of three-point branched covers of the projective line},
     Co-author}{2014}
-    \adcvrowmulti{
-      In this paper, we implement a general numerical method to compute Belyi maps
-      using power series expansions of modular forms.
-      I implemented code to visualize Belyi maps as
-      (equivalent) dessins d'enfants conformally
-      embedded in the hyperbolic unit disk.
-      %My code produced figures drawn using PSTricks (see Figure \ref{fig:dessin}).
-      My code produced figures drawn using PSTricks (see Figure 1).
-    }
+      \vspace{-10pt}
+      \begin{itemize}
+        \item
+          Implemented a general numerical method to compute
+          Belyi maps using power series expansions of modular forms
+        \item
+          Implemented code to visualize dessins d'enfants
+          (equivalent objects to Belyi maps) conformally embedded in
+          the hyperbolic unit disk
+        \item
+          Used this code to produce figures drawn using PSTricks
+          such as in Figure 1
+        \item
+          Peer-Reviewed Article: \cite{belyi}
+      \end{itemize}
     \adcvrowskip
-    \adcvrowtwo{\textbf{Computing Iwasawa $\lambda$-Invariants},
-    M.Sc. Thesis}{2014}
-    \adcvrowmulti{
-      In my M.Sc. thesis I implemented an algorithm to compute the Iwasawa
-      $\lambda$-invariant of an abelian number field in Magma.
-      Using these computations, I was able to correct some mistakes in
-      the literature.
-    }
-    \adcvrowskip
-    % \adcvrowtwo{\textbf{\href{http://www.arcadia-framework.eu}{ARCADIA}}, a framework for developing highly distributed applications}{2014--2016}
+    \adcvrowtwo{\textbf{Computing Iwasawa $\lambda$-Invariants}, M.Sc. Thesis}{2014}
+      \vspace{-10pt}
+      \begin{itemize}
+        \item
+          Implemented an algorithm to compute the Iwasawa
+          $\lambda$-invariant of an abelian number field using Magma
+        \item
+          Repository: \url{https://github.com/michaelmusty/iwasawa}
+      \end{itemize}
   \end{adcvtabletwo}
 }
 
 \section{Publications}{
-
   \begin{refsection}
     \nocite{ants}
     \nocite{aaron}
@@ -169,38 +182,46 @@
 }
 
 \section{Community}{
-
   \begin{adcvtabletwo}
     \adcvrowtwo{\textbf{Dartmouth Mathematics Youth Summer Program},
     Guest Lecturer, Hanover, NH, USA}{2016}
-    \adcvrowmulti{
-      I gave four guest lectures on probability and knot theory
-      and helped organize this two week summer program.
-    }
+      \vspace{-10pt}
+      \begin{itemize}
+        \item
+          Gave 2 guest lectures on probability
+        \item
+          Gave 2 guest lectures on knot theory
+      \end{itemize}
     \adcvrowskip
     \adcvrowtwo{\textbf{Johns Hopkins Program for Talented Youth},
     Guest Lecturer, Hanover, NH, USA}{2015}
-    \adcvrowmulti{
-      I gave a guest lecture on group theory.
-    }
+      \vspace{-10pt}
+      \begin{itemize}
+        \item
+          Gave a guest lecture on group theory
+      \end{itemize}
     \adcvrowskip
     \adcvrowtwo{\textbf{Joshua M. Stimson Math Program},
     Organizer, North Haverhill, NH, USA}{2011-2012}
-    \adcvrowmulti{
-      I organized a four week long summer program
-      for advanced middle school students.
-      I was the organizer for the first two years of this summer program.
-    }
-    \adcvrowskip
+      \vspace{-10pt}
+      \begin{itemize}
+        \item
+          Organized a 4 week summer program in mathematics for 
+          advanced middle school students
+        \item
+          Organized and taught the summer program in 2011 and 2012
+      \end{itemize}
   \end{adcvtabletwo}
 }
 
 \begin{figure}[ht]\label{fig:dessin}
   \centering
   %\includegraphics[scale=0.67]{32S2-g5.pdf}
-  \includegraphics[scale=0.4]{32S2-g5.pdf}
+  %\includegraphics[scale=0.4]{32S2-g5.pdf}
+  %\includegraphics[scale=0.4]{belyi5.pdf}
+  \includegraphics[scale=0.2]{belyi1.pdf}
   \caption{
-    A genus 5 dessin d'enfant drawn using \LaTeX and PSTricks.
+    A genus 1 dessin d'enfant drawn using \LaTeX and PSTricks.
   }
 \end{figure}
 
