--- a/musty_resume.tex
+++ b/musty_resume.tex
@@ -10,7 +10,7 @@
 
 \title{musty_cv}
 
-\adcvname{Michael}{Musty}
+\adcvname{Michael Musty}{}
 \adcvtitle{Ph.D. Candidate, Mathematics, Dartmouth College}
 \adcvaddress{55 Church Street}{03779}{Piermont}{New Hampshire USA}
 %\adcvwebsite{https://math.dartmouth.edu/~mjmusty}{math.dartmouth.edu/~mjmusty}
